add le fichier readme.md et enleve le boutton retour dans les fichier interpreter et listener

--- a/live-interpretation-node/public/interpreter.html
+++ b/live-interpretation-node/public/interpreter.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main class="container">
-      <a class="back-link" href="/">← Retour</a>
+      <!-- <a class="back-link" href="/">← Retour</a> -->
       <h1>Mode Interprete</h1>
 
       <section class="card">
@@ -17,7 +17,7 @@
           <option value="fr">Francais</option>
           <option value="en">Anglais</option>
           <option value="sw">Swahili</option>
-          <option value="ki">Kinyarwanda</option>
+          <option value="ki">Kirundi</option>
         </select>
 
         <div class="actions-row">
